--- a/MoodFix/appsettings.json
+++ b/MoodFix/appsettings.json
@@ -9,7 +9,6 @@
     //"AppContext": "Server=(localdb)\\mssqllocaldb;Database=AppContext-2;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"MoodFixContext": "Server=(localdb)\\mssqllocaldb;Database=MoodFixContext-850c985d-a90b-44b9-a470-2c83867b5fcb;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"IdentityConnection": "Server=moodfixdb.cjgcucevlxv5.us-west-2.rds.amazonaws.com;Database=moodfixdb;Uid=blakeaws;Pwd=poobumwee123$%^",
-    "IdentityConnection": "server=localhost;user id=root;Password=root;persistsecurityinfo=True;database=moodfixdb",
-    "DefaultConnection": "Data Source=mydb.sqlite"
+    "IdentityConnection": "server=localhost;user id=root;Password=root;persistsecurityinfo=True;database=moodfixdb"
   }
 }
